[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "astrovision"
version = "0.5.0"
description = "The compulsory Python library to work with satellite imagery."
authors = [
    "Raya Berova <raya.berova@insee.fr>",
    "Thomas Faria <thomas.faria@insee.fr>",
    "Clément Guillo <clement.guillo@insee.fr>",
    "Tom Seimandi <tom.seimandi@gmail.com>"
]
readme = "README.md"
license = "MIT"
packages = [
    {include = "astrovision"},
    {include = "astrovision/data"},
    {include = "astrovision/plot"}
]
homepage = "https://github.com/InseeFrLab/astrovision"
repository = "https://github.com/InseeFrLab/astrovision"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
rasterio = "^1.3.9"
torch = "^2.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
myst-parser = "^2.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-book-theme = "^1.0.1"

[tool.isort]
profile = "black"
